11 AM 3/18 Meeting Commits - Final work done. Now next steps.

--- a/gancode/gan_training_results_analysis.ipynb
+++ b/gancode/gan_training_results_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "id": "d2b3ab33",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,8 @@
     "import matplotlib.image as mpimg\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "import os"
+    "import os\n",
+    "import shutil"
    ]
   },
   {
@@ -20,6 +21,14 @@
    "source": [
     "## Training Model"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "72e2070c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -33,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 4,
    "id": "6f0b20cd",
    "metadata": {},
    "outputs": [],
