--- a/gancode/gan_training_v2.ipynb
+++ b/gancode/gan_training_v2.ipynb
@@ -56,7 +56,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "26b4be22",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -77,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1521809",
+   "id": "f508cb2d",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +90,7 @@
       "               batch_size: 1                             \n",
       "                    beta1: 0.5                           \n",
       "          checkpoints_dir: ./checkpoints                 \n",
-      "           continue_train: True                          \t[default: False]\n",
+      "           continue_train: False                         \n",
       "                crop_size: 256                           \n",
       "                 dataroot: /users/riya/race/gandataset   \t[default: None]\n",
       "             dataset_mode: aligned                       \n",
@@ -101,17 +103,17 @@
       "           display_server: http://localhost              \n",
       "          display_winsize: 256                           \n",
       "                    epoch: latest                        \n",
-      "              epoch_count: 50                            \t[default: 1]\n",
+      "              epoch_count: 1                             \n",
       "                 gan_mode: vanilla                       \n",
       "                  gpu_ids: 1,2                           \t[default: 0]\n",
       "                init_gain: 0.02                          \n",
       "                init_type: normal                        \n",
       "                 input_nc: 3                             \n",
       "                  isTrain: True                          \t[default: None]\n",
-      "                lambda_L1: 10.0                          \t[default: 100.0]\n",
+      "                lambda_L1: 100000.0                      \t[default: 100.0]\n",
       "                load_iter: 0                             \t[default: 0]\n",
-      "                load_size: 256                           \t[default: 286]\n",
-      "                       lr: 2e-06                         \t[default: 0.0002]\n",
+      "                load_size: 286                           \n",
+      "                       lr: 2e-05                         \t[default: 0.0002]\n",
       "           lr_decay_iters: 50                            \n",
       "                lr_policy: linear                        \n",
       "         max_dataset_size: inf                           \n",
@@ -119,7 +121,7 @@
       "                 n_epochs: 100                           \n",
       "           n_epochs_decay: 100                           \n",
       "               n_layers_D: 3                             \n",
-      "                     name: raceGAN_final1                \t[default: experiment_name]\n",
+      "                     name: raceGAN_baseline              \t[default: experiment_name]\n",
       "                      ndf: 64                            \n",
       "                     netD: basic                         \n",
       "                     netG: unet_256                      \n",
@@ -148,8 +150,6 @@
       "initialize network with normal\n",
       "initialize network with normal\n",
       "model [Pix2PixModel] was created\n",
-      "loading the model from ./checkpoints/raceGAN_final1/latest_net_G.pth\n",
-      "loading the model from ./checkpoints/raceGAN_final1/latest_net_D.pth\n",
       "---------- Networks initialized -------------\n",
       "[Network G] Total number of parameters : 54.414 M\n",
       "[Network D] Total number of parameters : 2.769 M\n",
@@ -189,7 +189,7 @@
       "    conn = self._new_conn()\n",
       "  File \"/usr/local/lib/python3.6/dist-packages/urllib3/connection.py\", line 187, in _new_conn\n",
       "    self, \"Failed to establish a new connection: %s\" % e\n",
-      "urllib3.exceptions.NewConnectionError: <urllib3.connection.HTTPConnection object at 0x7fb5fe02c710>: Failed to establish a new connection: [Errno 111] Connection refused\n",
+      "urllib3.exceptions.NewConnectionError: <urllib3.connection.HTTPConnection object at 0x7f4fb4c55518>: Failed to establish a new connection: [Errno 111] Connection refused\n",
       "\n",
       "During handling of the above exception, another exception occurred:\n",
       "\n",
@@ -200,7 +200,7 @@
       "    method, url, error=e, _pool=self, _stacktrace=sys.exc_info()[2]\n",
       "  File \"/usr/local/lib/python3.6/dist-packages/urllib3/util/retry.py\", line 592, in increment\n",
       "    raise MaxRetryError(_pool, url, error or ResponseError(cause))\n",
-      "urllib3.exceptions.MaxRetryError: HTTPConnectionPool(host='localhost', port=8097): Max retries exceeded with url: /env/main (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7fb5fe02c710>: Failed to establish a new connection: [Errno 111] Connection refused',))\n",
+      "urllib3.exceptions.MaxRetryError: HTTPConnectionPool(host='localhost', port=8097): Max retries exceeded with url: /env/main (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f4fb4c55518>: Failed to establish a new connection: [Errno 111] Connection refused',))\n",
       "\n",
       "During handling of the above exception, another exception occurred:\n",
       "\n",
@@ -217,45 +217,71 @@
       "    r = adapter.send(request, **kwargs)\n",
       "  File \"/usr/local/lib/python3.6/dist-packages/requests/adapters.py\", line 516, in send\n",
       "    raise ConnectionError(e, request=request)\n",
-      "requests.exceptions.ConnectionError: HTTPConnectionPool(host='localhost', port=8097): Max retries exceeded with url: /env/main (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7fb5fe02c710>: Failed to establish a new connection: [Errno 111] Connection refused',))\n",
-      "[Errno 111] Connection refused\n"
+      "requests.exceptions.ConnectionError: HTTPConnectionPool(host='localhost', port=8097): Max retries exceeded with url: /env/main (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f4fb4c55518>: Failed to establish a new connection: [Errno 111] Connection refused',))\n",
+      "[Errno 111] Connection refused\n",
+      "\n",
+      "\n",
+      "Could not connect to Visdom server. \n",
+      " Trying to start a server....\n",
+      "Command: /usr/local/bin/python -m visdom.server -p 8097 &>/dev/null &\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\n",
-      "Could not connect to Visdom server. \n",
-      " Trying to start a server....\n",
-      "Command: /usr/local/bin/python -m visdom.server -p 8097 &>/dev/null &\n",
-      "create web directory ./checkpoints/raceGAN_final1/web...\n",
+      "create web directory ./checkpoints/raceGAN_baseline/web...\n",
       "/usr/local/lib/python3.6/dist-packages/torch/optim/lr_scheduler.py:134: UserWarning: Detected call of `lr_scheduler.step()` before `optimizer.step()`. In PyTorch 1.1.0 and later, you should call them in the opposite order: `optimizer.step()` before `lr_scheduler.step()`.  Failure to do this will result in PyTorch skipping the first value of the learning rate schedule. See more details at https://pytorch.org/docs/stable/optim.html#how-to-adjust-learning-rate\n",
       "  \"https://pytorch.org/docs/stable/optim.html#how-to-adjust-learning-rate\", UserWarning)\n",
-      "learning rate 0.0000020 -> 0.0000020\n",
-      "(epoch: 50, iters: 100, time: 0.215, data: 0.196) G_GAN: 1.326 G_L1: 1.026 D_real: 0.981 D_fake: 0.323 \n",
-      "(epoch: 50, iters: 200, time: 0.220, data: 0.001) G_GAN: 1.401 G_L1: 1.393 D_real: 0.828 D_fake: 0.322 \n",
-      "(epoch: 50, iters: 300, time: 0.219, data: 0.003) G_GAN: 1.194 G_L1: 1.581 D_real: 0.104 D_fake: 0.428 \n",
-      "(epoch: 50, iters: 400, time: 0.548, data: 0.003) G_GAN: 0.996 G_L1: 0.992 D_real: 0.345 D_fake: 0.507 \n",
-      "(epoch: 50, iters: 500, time: 0.219, data: 0.002) G_GAN: 1.603 G_L1: 1.769 D_real: 0.326 D_fake: 0.298 \n",
-      "(epoch: 50, iters: 600, time: 0.219, data: 0.002) G_GAN: 1.484 G_L1: 1.228 D_real: 0.344 D_fake: 0.277 \n",
-      "(epoch: 50, iters: 700, time: 0.222, data: 0.001) G_GAN: 1.350 G_L1: 1.779 D_real: 0.258 D_fake: 0.430 \n",
-      "(epoch: 50, iters: 800, time: 0.283, data: 0.003) G_GAN: 1.189 G_L1: 0.769 D_real: 0.706 D_fake: 0.378 \n",
-      "(epoch: 50, iters: 900, time: 0.219, data: 0.002) G_GAN: 1.336 G_L1: 1.301 D_real: 0.308 D_fake: 0.347 \n",
-      "(epoch: 50, iters: 1000, time: 0.220, data: 0.002) G_GAN: 0.795 G_L1: 1.787 D_real: 0.316 D_fake: 0.865 \n",
-      "(epoch: 50, iters: 1100, time: 0.217, data: 0.002) G_GAN: 1.238 G_L1: 0.657 D_real: 0.749 D_fake: 0.373 \n"
+      "learning rate 0.0000200 -> 0.0000200\n",
+      "(epoch: 1, iters: 100, time: 0.212, data: 0.124) G_GAN: 2.171 G_L1: 29395.223 D_real: 0.226 D_fake: 0.163 \n",
+      "(epoch: 1, iters: 200, time: 0.214, data: 0.002) G_GAN: 3.487 G_L1: 18737.859 D_real: 0.065 D_fake: 0.041 \n",
+      "(epoch: 1, iters: 300, time: 0.209, data: 0.003) G_GAN: 4.128 G_L1: 39242.746 D_real: 0.028 D_fake: 0.021 \n",
+      "(epoch: 1, iters: 400, time: 0.372, data: 0.002) G_GAN: 3.718 G_L1: 24505.311 D_real: 0.064 D_fake: 0.031 \n",
+      "(epoch: 1, iters: 500, time: 0.211, data: 0.002) G_GAN: 4.555 G_L1: 16813.693 D_real: 0.037 D_fake: 0.012 \n",
+      "(epoch: 1, iters: 600, time: 0.216, data: 0.003) G_GAN: 3.259 G_L1: 21842.066 D_real: 0.113 D_fake: 0.049 \n",
+      "(epoch: 1, iters: 700, time: 0.213, data: 0.003) G_GAN: 4.131 G_L1: 61059.082 D_real: 0.012 D_fake: 0.031 \n",
+      "(epoch: 1, iters: 800, time: 0.283, data: 0.003) G_GAN: 4.715 G_L1: 24475.312 D_real: 0.008 D_fake: 0.013 \n",
+      "(epoch: 1, iters: 900, time: 0.221, data: 0.002) G_GAN: 4.721 G_L1: 21975.117 D_real: 0.008 D_fake: 0.022 \n",
+      "(epoch: 1, iters: 1000, time: 0.218, data: 0.002) G_GAN: 5.199 G_L1: 24574.518 D_real: 0.003 D_fake: 0.008 \n",
+      "(epoch: 1, iters: 1100, time: 0.221, data: 0.002) G_GAN: 3.234 G_L1: 21113.561 D_real: 0.034 D_fake: 0.064 \n",
+      "(epoch: 1, iters: 1200, time: 0.284, data: 0.002) G_GAN: 5.501 G_L1: 19795.152 D_real: 0.005 D_fake: 0.005 \n",
+      "(epoch: 1, iters: 1300, time: 0.219, data: 0.002) G_GAN: 5.203 G_L1: 28822.727 D_real: 0.003 D_fake: 0.008 \n",
+      "(epoch: 1, iters: 1400, time: 0.222, data: 0.003) G_GAN: 5.959 G_L1: 41432.949 D_real: 0.004 D_fake: 0.003 \n",
+      "(epoch: 1, iters: 1500, time: 0.216, data: 0.002) G_GAN: 6.383 G_L1: 22350.859 D_real: 0.005 D_fake: 0.002 \n",
+      "(epoch: 1, iters: 1600, time: 0.289, data: 0.002) G_GAN: 5.948 G_L1: 26610.400 D_real: 0.002 D_fake: 0.004 \n",
+      "End of epoch 1 / 200 \t Time Taken: 204 sec\n",
+      "learning rate 0.0000200 -> 0.0000200\n",
+      "(epoch: 2, iters: 77, time: 0.220, data: 0.002) G_GAN: 6.729 G_L1: 21997.633 D_real: 0.002 D_fake: 0.002 \n",
+      "(epoch: 2, iters: 177, time: 0.217, data: 0.002) G_GAN: 5.592 G_L1: 19897.689 D_real: 0.006 D_fake: 0.006 \n",
+      "(epoch: 2, iters: 277, time: 0.213, data: 0.002) G_GAN: 6.545 G_L1: 23597.537 D_real: 0.001 D_fake: 0.002 \n",
+      "(epoch: 2, iters: 377, time: 0.377, data: 0.003) G_GAN: 6.259 G_L1: 19047.820 D_real: 0.002 D_fake: 0.003 \n",
+      "(epoch: 2, iters: 477, time: 0.219, data: 0.002) G_GAN: 1.947 G_L1: 14799.773 D_real: 0.854 D_fake: 0.016 \n",
+      "(epoch: 2, iters: 577, time: 0.216, data: 0.002) G_GAN: 5.925 G_L1: 14536.223 D_real: 0.003 D_fake: 0.003 \n",
+      "(epoch: 2, iters: 677, time: 0.217, data: 0.003) G_GAN: 5.662 G_L1: 21236.873 D_real: 0.001 D_fake: 0.005 \n"
      ]
     }
    ],
    "source": [
-    "!python train.py --dataroot /users/riya/race/gandataset --continue_train --epoch_count 50 --batch_size 1 --lambda_L1 10.0 --lr .000002 --name raceGAN_final1 --model pix2pix --gpu_ids 1,2 --load_size 256 --crop_size 256"
+    "!python train.py --dataroot /users/riya/race/gandataset --batch_size 1 --lambda_L1 100000.0 --lr .00002 --name raceGAN_baseline --model pix2pix --gpu_ids 1,2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c0dea25",
+   "metadata": {},
+   "source": [
+    "3/20 10:51 PM: this test will be very interesting! Let's see what goes on, how the model performs. Should also re-try my control with lambda l1. Perhaps that is the key. I gotta try that as well. Two models tonight ig.\n",
+    "\n",
+    "Also need to train a baseline model (with really high l1) but lets see. Maybe high l1 is the way to go. I should be able to test by 50, because there is so many artifacts. \n",
+    "\n",
+    "https://www.semanticscholar.org/paper/CycleGAN-based-deep-learning-technique-for-artifact-Yoo-Choi/43fe259a1f5527a2261451001b986bb08b1576be ooh"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f508cb2d",
+   "id": "7ba574a9",
    "metadata": {},
    "outputs": [],
    "source": []
