quality testing completed for 1 model for wed!

--- a/gancode/gan_training_v2.ipynb
+++ b/gancode/gan_training_v2.ipynb
@@ -258,7 +258,18 @@
       "(epoch: 2, iters: 377, time: 0.377, data: 0.003) G_GAN: 6.259 G_L1: 19047.820 D_real: 0.002 D_fake: 0.003 \n",
       "(epoch: 2, iters: 477, time: 0.219, data: 0.002) G_GAN: 1.947 G_L1: 14799.773 D_real: 0.854 D_fake: 0.016 \n",
       "(epoch: 2, iters: 577, time: 0.216, data: 0.002) G_GAN: 5.925 G_L1: 14536.223 D_real: 0.003 D_fake: 0.003 \n",
-      "(epoch: 2, iters: 677, time: 0.217, data: 0.003) G_GAN: 5.662 G_L1: 21236.873 D_real: 0.001 D_fake: 0.005 \n"
+      "(epoch: 2, iters: 677, time: 0.217, data: 0.003) G_GAN: 5.662 G_L1: 21236.873 D_real: 0.001 D_fake: 0.005 \n",
+      "(epoch: 2, iters: 777, time: 0.296, data: 0.003) G_GAN: 6.368 G_L1: 33553.750 D_real: 0.001 D_fake: 0.002 \n",
+      "(epoch: 2, iters: 877, time: 0.224, data: 0.002) G_GAN: 6.078 G_L1: 26285.455 D_real: 0.001 D_fake: 0.003 \n",
+      "(epoch: 2, iters: 977, time: 0.223, data: 0.003) G_GAN: 5.443 G_L1: 17774.980 D_real: 0.001 D_fake: 0.006 \n",
+      "(epoch: 2, iters: 1077, time: 0.219, data: 0.002) G_GAN: 6.775 G_L1: 17118.287 D_real: 0.001 D_fake: 0.001 \n",
+      "(epoch: 2, iters: 1177, time: 0.291, data: 0.002) G_GAN: 7.015 G_L1: 16866.494 D_real: 0.000 D_fake: 0.001 \n",
+      "(epoch: 2, iters: 1277, time: 0.224, data: 0.002) G_GAN: 5.322 G_L1: 34428.145 D_real: 0.000 D_fake: 0.008 \n",
+      "(epoch: 2, iters: 1377, time: 0.221, data: 0.002) G_GAN: 7.155 G_L1: 21744.451 D_real: 0.000 D_fake: 0.001 \n",
+      "(epoch: 2, iters: 1477, time: 0.222, data: 0.003) G_GAN: 6.273 G_L1: 26923.078 D_real: 0.000 D_fake: 0.003 \n",
+      "(epoch: 2, iters: 1577, time: 0.291, data: 0.003) G_GAN: 5.240 G_L1: 21256.596 D_real: 0.001 D_fake: 0.010 \n",
+      "End of epoch 2 / 200 \t Time Taken: 203 sec\n",
+      "learning rate 0.0000200 -> 0.0000200\n"
      ]
     }
    ],
