classifier experiments beginning - high intensity pixel removal

--- a/gancode/gan_training_analysis.ipynb
+++ b/gancode/gan_training_analysis.ipynb
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "f7b44be3",
+   "id": "24f6c861",
    "metadata": {
     "scrolled": true
    },
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3a329be",
+   "id": "951a65b1",
    "metadata": {},
    "source": [
     "### Copy images from GAN results into quality DeepROP dataset folder"
@@ -544,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "90b4c919",
+   "id": "6c7f4810",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "e7478683",
+   "id": "eff05abe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "8b96ab5a",
+   "id": "2d6ddd6d",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "8accde5e",
+   "id": "c4631e39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "6d3b4a47",
+   "id": "c1969bec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4e041ee",
+   "id": "ad025ac4",
    "metadata": {},
    "source": [
     "### Running Quality Control Model\n",
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7997bffb",
+   "id": "dfa93fba",
    "metadata": {},
    "source": [
     "### Generating Graphic"
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "c5b26a5a",
+   "id": "e33d273c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "509fb772",
+   "id": "c9ca6b03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "0031a2cb",
+   "id": "782aedff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,7 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "55ef8365",
+   "id": "ef821fec",
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "365a4d39",
+   "id": "6f5f7ea9",
    "metadata": {},
    "outputs": [
     {
@@ -770,8 +770,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "id": "687c8bf3",
+   "execution_count": 130,
+   "id": "8f3b10bc",
    "metadata": {},
    "outputs": [
     {
@@ -803,75 +803,131 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>119</th>\n",
-       "      <td>30051_epoch75</td>\n",
-       "      <td>/data/quality_dataset/30051_epoch75.png</td>\n",
-       "      <td>0.807507</td>\n",
-       "      <td>75</td>\n",
+       "      <th>0</th>\n",
+       "      <td>101696_epoch100</td>\n",
+       "      <td>/data/quality_dataset/101696_epoch100.png</td>\n",
+       "      <td>3.251219e-06</td>\n",
+       "      <td>100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>167</th>\n",
-       "      <td>34454_epoch75</td>\n",
-       "      <td>/data/quality_dataset/34454_epoch75.png</td>\n",
-       "      <td>0.862756</td>\n",
-       "      <td>75</td>\n",
+       "      <th>1</th>\n",
+       "      <td>101696_epoch125</td>\n",
+       "      <td>/data/quality_dataset/101696_epoch125.png</td>\n",
+       "      <td>4.248583e-07</td>\n",
+       "      <td>125</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>173</th>\n",
-       "      <td>34742_epoch75</td>\n",
-       "      <td>/data/quality_dataset/34742_epoch75.png</td>\n",
-       "      <td>0.848572</td>\n",
-       "      <td>75</td>\n",
+       "      <th>2</th>\n",
+       "      <td>101696_epoch150</td>\n",
+       "      <td>/data/quality_dataset/101696_epoch150.png</td>\n",
+       "      <td>1.967786e-06</td>\n",
+       "      <td>150</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>335</th>\n",
-       "      <td>76794_epoch75</td>\n",
-       "      <td>/data/quality_dataset/76794_epoch75.png</td>\n",
-       "      <td>0.789328</td>\n",
-       "      <td>75</td>\n",
+       "      <th>3</th>\n",
+       "      <td>101696_epoch25</td>\n",
+       "      <td>/data/quality_dataset/101696_epoch25.png</td>\n",
+       "      <td>1.310255e-04</td>\n",
+       "      <td>25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>443</th>\n",
-       "      <td>93148_epoch75</td>\n",
-       "      <td>/data/quality_dataset/93148_epoch75.png</td>\n",
-       "      <td>0.757367</td>\n",
-       "      <td>75</td>\n",
+       "      <th>4</th>\n",
+       "      <td>101696_epoch50</td>\n",
+       "      <td>/data/quality_dataset/101696_epoch50.png</td>\n",
+       "      <td>6.718443e-04</td>\n",
+       "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>467</th>\n",
-       "      <td>96245_epoch75</td>\n",
-       "      <td>/data/quality_dataset/96245_epoch75.png</td>\n",
-       "      <td>0.997112</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>511</th>\n",
+       "      <td>98322_epoch125</td>\n",
+       "      <td>/data/quality_dataset/98322_epoch125.png</td>\n",
+       "      <td>5.315857e-08</td>\n",
+       "      <td>125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>512</th>\n",
+       "      <td>98322_epoch150</td>\n",
+       "      <td>/data/quality_dataset/98322_epoch150.png</td>\n",
+       "      <td>2.214061e-08</td>\n",
+       "      <td>150</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>513</th>\n",
+       "      <td>98322_epoch25</td>\n",
+       "      <td>/data/quality_dataset/98322_epoch25.png</td>\n",
+       "      <td>1.869664e-05</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>514</th>\n",
+       "      <td>98322_epoch50</td>\n",
+       "      <td>/data/quality_dataset/98322_epoch50.png</td>\n",
+       "      <td>2.230605e-05</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>515</th>\n",
+       "      <td>98322_epoch75</td>\n",
+       "      <td>/data/quality_dataset/98322_epoch75.png</td>\n",
+       "      <td>1.291824e-06</td>\n",
        "      <td>75</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>404 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          img_name                                     path   quality epoch\n",
-       "119  30051_epoch75  /data/quality_dataset/30051_epoch75.png  0.807507    75\n",
-       "167  34454_epoch75  /data/quality_dataset/34454_epoch75.png  0.862756    75\n",
-       "173  34742_epoch75  /data/quality_dataset/34742_epoch75.png  0.848572    75\n",
-       "335  76794_epoch75  /data/quality_dataset/76794_epoch75.png  0.789328    75\n",
-       "443  93148_epoch75  /data/quality_dataset/93148_epoch75.png  0.757367    75\n",
-       "467  96245_epoch75  /data/quality_dataset/96245_epoch75.png  0.997112    75"
+       "            img_name                                       path       quality  \\\n",
+       "0    101696_epoch100  /data/quality_dataset/101696_epoch100.png  3.251219e-06   \n",
+       "1    101696_epoch125  /data/quality_dataset/101696_epoch125.png  4.248583e-07   \n",
+       "2    101696_epoch150  /data/quality_dataset/101696_epoch150.png  1.967786e-06   \n",
+       "3     101696_epoch25   /data/quality_dataset/101696_epoch25.png  1.310255e-04   \n",
+       "4     101696_epoch50   /data/quality_dataset/101696_epoch50.png  6.718443e-04   \n",
+       "..               ...                                        ...           ...   \n",
+       "511   98322_epoch125   /data/quality_dataset/98322_epoch125.png  5.315857e-08   \n",
+       "512   98322_epoch150   /data/quality_dataset/98322_epoch150.png  2.214061e-08   \n",
+       "513    98322_epoch25    /data/quality_dataset/98322_epoch25.png  1.869664e-05   \n",
+       "514    98322_epoch50    /data/quality_dataset/98322_epoch50.png  2.230605e-05   \n",
+       "515    98322_epoch75    /data/quality_dataset/98322_epoch75.png  1.291824e-06   \n",
+       "\n",
+       "     epoch  \n",
+       "0      100  \n",
+       "1      125  \n",
+       "2      150  \n",
+       "3       25  \n",
+       "4       50  \n",
+       "..     ...  \n",
+       "511    125  \n",
+       "512    150  \n",
+       "513     25  \n",
+       "514     50  \n",
+       "515     75  \n",
+       "\n",
+       "[404 rows x 4 columns]"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "quality_csv.loc[(quality_csv['quality']> 0.75) & (quality_csv['epoch'] == '75')] ## highest quality in epoch 25!!\n",
+    "quality_csv.loc[(quality_csv['quality'] < 0.1)] ## highest quality in epoch 25!!\n",
     "\n",
     "# is lower quality better?"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ee8656ce",
+   "id": "7b7e0312",
    "metadata": {},
    "source": [
     "I want to make a plot of average quality on epoch vs. epochs. First, I should create an epoch column :)"
@@ -880,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "49926f01",
+   "id": "63550f17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -899,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "7e9faf0c",
+   "id": "87ae7630",
    "metadata": {},
    "outputs": [
     {
@@ -997,7 +1053,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "cfa1711f",
+   "id": "6f6d7b5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1007,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "ce9a221c",
+   "id": "6b12df88",
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1148,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "15172adf",
+   "id": "3fb654fc",
    "metadata": {
     "scrolled": false
    },
@@ -1127,14 +1183,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06a9b465",
+   "id": "fdd9a4f0",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "7ec92116",
+   "id": "6b1a060f",
    "metadata": {},
    "source": [
     "### A Bit OLD"
@@ -1143,7 +1199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eeb71294",
+   "id": "3e2941c9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1958,7 +2014,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "41723f48",
+   "id": "9282a996",
    "metadata": {},
    "outputs": [
     {
@@ -1993,7 +2049,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "51bbd4a4",
+   "id": "161f729d",
    "metadata": {},
    "outputs": [
     {
@@ -2028,7 +2084,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "78d5c6a1",
+   "id": "5af52ede",
    "metadata": {},
    "outputs": [
     {
@@ -2063,7 +2119,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "5ddfd01b",
+   "id": "2a3b64c2",
    "metadata": {},
    "outputs": [
     {
@@ -2098,7 +2154,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e3fdab69",
+   "id": "28e884a0",
    "metadata": {},
    "outputs": [
     {
