got results! In testing all 628 images, they was a significant majority predicted incorrectly with back thresholding and predicted correctly with center thresholding

--- a/classifier_experiments/shadow_regions_experiment2.ipynb
+++ b/classifier_experiments/shadow_regions_experiment2.ipynb
@@ -1452,6 +1452,378 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "ee7a2d79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data20 = data20.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "c8a48826",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>subject_id</th>\n",
+       "      <th>race</th>\n",
+       "      <th>variable</th>\n",
+       "      <th>value</th>\n",
+       "      <th>image_id</th>\n",
+       "      <th>fundus_location</th>\n",
+       "      <th>segmentation_location</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1019</td>\n",
+       "      <td>RCOL-0022-JS</td>\n",
+       "      <td>black</td>\n",
+       "      <td>posterior</td>\n",
+       "      <td>https://tctc.ohsu.edu/uploads/7393.png</td>\n",
+       "      <td>7393</td>\n",
+       "      <td>7393.png</td>\n",
+       "      <td>7393.bmp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3588</td>\n",
+       "      <td>RCOL-0026-MM</td>\n",
+       "      <td>black</td>\n",
+       "      <td>nasal</td>\n",
+       "      <td>https://tctc.ohsu.edu/uploads/7419.png</td>\n",
+       "      <td>7419</td>\n",
+       "      <td>7419.png</td>\n",
+       "      <td>7419.bmp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1020</td>\n",
+       "      <td>RCOL-0026-MM</td>\n",
+       "      <td>black</td>\n",
+       "      <td>posterior</td>\n",
+       "      <td>https://tctc.ohsu.edu/uploads/7420.png</td>\n",
+       "      <td>7420</td>\n",
+       "      <td>7420.png</td>\n",
+       "      <td>7420.bmp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1021</td>\n",
+       "      <td>RCOL-0026-MM</td>\n",
+       "      <td>black</td>\n",
+       "      <td>posterior</td>\n",
+       "      <td>https://tctc.ohsu.edu/uploads/7423.png</td>\n",
+       "      <td>7423</td>\n",
+       "      <td>7423.png</td>\n",
+       "      <td>7423.bmp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1027</td>\n",
+       "      <td>RCOL-0042-EW</td>\n",
+       "      <td>white</td>\n",
+       "      <td>posterior</td>\n",
+       "      <td>https://tctc.ohsu.edu/uploads/7568.png</td>\n",
+       "      <td>7568</td>\n",
+       "      <td>7568.png</td>\n",
+       "      <td>7568.bmp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1028</td>\n",
+       "      <td>RCOL-0042-EW</td>\n",
+       "      <td>white</td>\n",
+       "      <td>posterior</td>\n",
+       "      <td>https://tctc.ohsu.edu/uploads/7571.png</td>\n",
+       "      <td>7571</td>\n",
+       "      <td>7571.png</td>\n",
+       "      <td>7571.bmp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1029</td>\n",
+       "      <td>RCOL-0042-EW</td>\n",
+       "      <td>white</td>\n",
+       "      <td>posterior</td>\n",
+       "      <td>https://tctc.ohsu.edu/uploads/7575.png</td>\n",
+       "      <td>7575</td>\n",
+       "      <td>7575.png</td>\n",
+       "      <td>7575.bmp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1030</td>\n",
+       "      <td>RCOL-0042-EW</td>\n",
+       "      <td>white</td>\n",
+       "      <td>posterior</td>\n",
+       "      <td>https://tctc.ohsu.edu/uploads/7578.png</td>\n",
+       "      <td>7578</td>\n",
+       "      <td>7578.png</td>\n",
+       "      <td>7578.bmp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>731</td>\n",
+       "      <td>OHSU-0006</td>\n",
+       "      <td>white</td>\n",
+       "      <td>posterior</td>\n",
+       "      <td>https://tctc.ohsu.edu/uploads/9135.bmp</td>\n",
+       "      <td>9135</td>\n",
+       "      <td>9135.png</td>\n",
+       "      <td>9135.bmp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>735</td>\n",
+       "      <td>OHSU-0007</td>\n",
+       "      <td>white</td>\n",
+       "      <td>posterior</td>\n",
+       "      <td>https://tctc.ohsu.edu/uploads/9153.bmp</td>\n",
+       "      <td>9153</td>\n",
+       "      <td>9153.png</td>\n",
+       "      <td>9153.bmp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>739</td>\n",
+       "      <td>OHSU-0007</td>\n",
+       "      <td>white</td>\n",
+       "      <td>posterior</td>\n",
+       "      <td>https://tctc.ohsu.edu/uploads/9378.bmp</td>\n",
+       "      <td>9378</td>\n",
+       "      <td>9378.png</td>\n",
+       "      <td>9378.bmp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>740</td>\n",
+       "      <td>OHSU-0008</td>\n",
+       "      <td>white</td>\n",
+       "      <td>posterior</td>\n",
+       "      <td>https://tctc.ohsu.edu/uploads/9394.bmp</td>\n",
+       "      <td>9394</td>\n",
+       "      <td>9394.png</td>\n",
+       "      <td>9394.bmp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>745</td>\n",
+       "      <td>OHSU-0010</td>\n",
+       "      <td>white</td>\n",
+       "      <td>posterior</td>\n",
+       "      <td>https://tctc.ohsu.edu/uploads/9540.bmp</td>\n",
+       "      <td>9540</td>\n",
+       "      <td>9540.png</td>\n",
+       "      <td>9540.bmp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>747</td>\n",
+       "      <td>OHSU-0010</td>\n",
+       "      <td>white</td>\n",
+       "      <td>posterior</td>\n",
+       "      <td>https://tctc.ohsu.edu/uploads/9556.bmp</td>\n",
+       "      <td>9556</td>\n",
+       "      <td>9556.png</td>\n",
+       "      <td>9556.bmp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2516</td>\n",
+       "      <td>OHSU-0020</td>\n",
+       "      <td>white</td>\n",
+       "      <td>superior</td>\n",
+       "      <td>https://tctc.ohsu.edu/uploads/12013.jpg</td>\n",
+       "      <td>12013</td>\n",
+       "      <td>12013.png</td>\n",
+       "      <td>12013.bmp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>758</td>\n",
+       "      <td>OHSU-0020</td>\n",
+       "      <td>white</td>\n",
+       "      <td>posterior</td>\n",
+       "      <td>https://tctc.ohsu.edu/uploads/12018.jpg</td>\n",
+       "      <td>12018</td>\n",
+       "      <td>12018.png</td>\n",
+       "      <td>12018.bmp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>3345</td>\n",
+       "      <td>OHSU-0020</td>\n",
+       "      <td>white</td>\n",
+       "      <td>nasal</td>\n",
+       "      <td>https://tctc.ohsu.edu/uploads/12487.bmp</td>\n",
+       "      <td>12487</td>\n",
+       "      <td>12487.png</td>\n",
+       "      <td>12487.bmp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>765</td>\n",
+       "      <td>OHSU-0020</td>\n",
+       "      <td>white</td>\n",
+       "      <td>posterior</td>\n",
+       "      <td>https://tctc.ohsu.edu/uploads/12488.bmp</td>\n",
+       "      <td>12488</td>\n",
+       "      <td>12488.png</td>\n",
+       "      <td>12488.bmp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>774</td>\n",
+       "      <td>OHSU-0023</td>\n",
+       "      <td>white</td>\n",
+       "      <td>posterior</td>\n",
+       "      <td>https://tctc.ohsu.edu/uploads/15880.bmp</td>\n",
+       "      <td>15880</td>\n",
+       "      <td>15880.png</td>\n",
+       "      <td>15880.bmp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>3373</td>\n",
+       "      <td>OHSU-0038</td>\n",
+       "      <td>white</td>\n",
+       "      <td>nasal</td>\n",
+       "      <td>https://tctc.ohsu.edu/uploads/18163.bmp</td>\n",
+       "      <td>18163</td>\n",
+       "      <td>18163.png</td>\n",
+       "      <td>18163.bmp</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    index    subject_id   race   variable  \\\n",
+       "0    1019  RCOL-0022-JS  black  posterior   \n",
+       "1    3588  RCOL-0026-MM  black      nasal   \n",
+       "2    1020  RCOL-0026-MM  black  posterior   \n",
+       "3    1021  RCOL-0026-MM  black  posterior   \n",
+       "4    1027  RCOL-0042-EW  white  posterior   \n",
+       "5    1028  RCOL-0042-EW  white  posterior   \n",
+       "6    1029  RCOL-0042-EW  white  posterior   \n",
+       "7    1030  RCOL-0042-EW  white  posterior   \n",
+       "8     731     OHSU-0006  white  posterior   \n",
+       "9     735     OHSU-0007  white  posterior   \n",
+       "10    739     OHSU-0007  white  posterior   \n",
+       "11    740     OHSU-0008  white  posterior   \n",
+       "12    745     OHSU-0010  white  posterior   \n",
+       "13    747     OHSU-0010  white  posterior   \n",
+       "14   2516     OHSU-0020  white   superior   \n",
+       "15    758     OHSU-0020  white  posterior   \n",
+       "16   3345     OHSU-0020  white      nasal   \n",
+       "17    765     OHSU-0020  white  posterior   \n",
+       "18    774     OHSU-0023  white  posterior   \n",
+       "19   3373     OHSU-0038  white      nasal   \n",
+       "\n",
+       "                                      value  image_id fundus_location  \\\n",
+       "0    https://tctc.ohsu.edu/uploads/7393.png      7393        7393.png   \n",
+       "1    https://tctc.ohsu.edu/uploads/7419.png      7419        7419.png   \n",
+       "2    https://tctc.ohsu.edu/uploads/7420.png      7420        7420.png   \n",
+       "3    https://tctc.ohsu.edu/uploads/7423.png      7423        7423.png   \n",
+       "4    https://tctc.ohsu.edu/uploads/7568.png      7568        7568.png   \n",
+       "5    https://tctc.ohsu.edu/uploads/7571.png      7571        7571.png   \n",
+       "6    https://tctc.ohsu.edu/uploads/7575.png      7575        7575.png   \n",
+       "7    https://tctc.ohsu.edu/uploads/7578.png      7578        7578.png   \n",
+       "8    https://tctc.ohsu.edu/uploads/9135.bmp      9135        9135.png   \n",
+       "9    https://tctc.ohsu.edu/uploads/9153.bmp      9153        9153.png   \n",
+       "10   https://tctc.ohsu.edu/uploads/9378.bmp      9378        9378.png   \n",
+       "11   https://tctc.ohsu.edu/uploads/9394.bmp      9394        9394.png   \n",
+       "12   https://tctc.ohsu.edu/uploads/9540.bmp      9540        9540.png   \n",
+       "13   https://tctc.ohsu.edu/uploads/9556.bmp      9556        9556.png   \n",
+       "14  https://tctc.ohsu.edu/uploads/12013.jpg     12013       12013.png   \n",
+       "15  https://tctc.ohsu.edu/uploads/12018.jpg     12018       12018.png   \n",
+       "16  https://tctc.ohsu.edu/uploads/12487.bmp     12487       12487.png   \n",
+       "17  https://tctc.ohsu.edu/uploads/12488.bmp     12488       12488.png   \n",
+       "18  https://tctc.ohsu.edu/uploads/15880.bmp     15880       15880.png   \n",
+       "19  https://tctc.ohsu.edu/uploads/18163.bmp     18163       18163.png   \n",
+       "\n",
+       "   segmentation_location  \n",
+       "0               7393.bmp  \n",
+       "1               7419.bmp  \n",
+       "2               7420.bmp  \n",
+       "3               7423.bmp  \n",
+       "4               7568.bmp  \n",
+       "5               7571.bmp  \n",
+       "6               7575.bmp  \n",
+       "7               7578.bmp  \n",
+       "8               9135.bmp  \n",
+       "9               9153.bmp  \n",
+       "10              9378.bmp  \n",
+       "11              9394.bmp  \n",
+       "12              9540.bmp  \n",
+       "13              9556.bmp  \n",
+       "14             12013.bmp  \n",
+       "15             12018.bmp  \n",
+       "16             12487.bmp  \n",
+       "17             12488.bmp  \n",
+       "18             15880.bmp  \n",
+       "19             18163.bmp  "
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "93954ea9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7393"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data20['image_id'][0]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "790e08ab",
    "metadata": {},
@@ -2376,7 +2748,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csv_path = \"/users/riya/race/classifier_experiments/predictions/high_intensity_experiment2/\""
+    "preds_save_path = \"/users/riya/race/classifier_experiments/predictions/high_intensity_experiment2/\""
    ]
   },
   {
@@ -2386,7 +2758,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_df(preds_df, csv_path, 225)"
+    "save_df(preds_save_path, csv_path, 225)"
    ]
   },
   {
@@ -3728,7 +4100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c841a8fb",
+   "id": "94e2c3dc",
    "metadata": {},
    "outputs": [],
    "source": []
